--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<title>Grand Casino</title>
+	<title>KadroMilyon</title>
 	<link rel="stylesheet" href="/css/style.css" />
 	<link rel="stylesheet" href="/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/css/fontawesome.min.css" />
@@ -121,12 +121,12 @@
 					<div class="after">
 						<div class="col1">
 							{% for i in games_popular.0 %}
-								<a href="https://kadromilyon.com/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
+								<a href="/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
 							{% endfor %}
 						</div>
 						<div class="col2">
 							{% for i in games_popular.1 %}
-								<a href="https://kadromilyon.com/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
+								<a href="/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
 							{% endfor %}
 						</div>
 					</div>
@@ -138,12 +138,12 @@
 					<div class="after">
 						<div class="col1">
 							{% for i in live_casino_games.0 %}
-								<a href="https://kadromilyon.com/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
+								<a href="/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
 							{% endfor %}
 						</div>
 						<div class="col2">
 							{% for i in live_casino_games.1 %}
-								<a href="https://kadromilyon.com/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
+								<a href="/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
 							{% endfor %}
 						</div>
 					</div>
@@ -192,13 +192,13 @@
 				</div>
 				<div class="copy">
 					<a href="#." class="licence-url"> <img src="/img/licence.png" /> </a>
-					<p> Grand Casino.com is operated by M2 Betting registered under No. 164124 at, Chuchubiweg 17, Curaçao. This website is licensed and regulated by Curaçao eGaming, license No. 1668/JAZ.  In
+					<p>  is operated by M2 Betting registered under No. 164124 at, Chuchubiweg 17, Curaçao. This website is licensed and regulated by Curaçao eGaming, license No. 1668/JAZ.  In
 	order to register for this website, the user is required to accept the “<a href="#.">General Terms and Conditions.</a>" In the event the ”<a href="#.">General Terms and Conditions</a>" are updated, existing users may choose to
 	discontinue using the products and services before the said update shall become effective, which is a minimum of two weeks after it has been announced.  </p>
 				</div>
 				<div class="finish">
 					<a href="/"> <img src="/img/logo.png" /> </a>
-					<p> 2024 © Grand Casino </p>
+					<p> 2024 © KadroMilyon </p>
 				</div>
 			</div>
 		</div>
