--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -68,7 +68,7 @@
 					<a href="/canli_bahis" class="n-link"> <i class="km km-live"></i> <span>CANLI BAHİS</span> </a>
 					<a href="/bahis" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a>
 					<a href="/casino" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a>
-					<a href="/casino" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
+					<a href="/casino?provider_id=122&provider_name=Evolution" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
 					<a href="/fantezi" class="n-link"> <i class="km km-games"></i> <span>OYUNLAR</span> </a>
 					<a href="/casino?search_query=bingo" class="n-link"> <i class="km km-tomb"></i> <span>TOMBALA</span> </a>
 					<a href="/casino/1022357" class="n-link"> <i class="km km-aviator"></i> <span>AVIATOR</span> </a>
@@ -103,7 +103,7 @@
 						<div class="sLymx3 owl-carousel">
 							<div class="slide"> <a href="/bahis" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a> </div>
 							<div class="slide"> <a href="/casino" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a> </div>
-							<div class="slide"> <a href="/casino" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a> </div>
+							<div class="slide"> <a href="/casino?provider_id=122&provider_name=Evolution" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a> </div>
 							<div class="slide"> <a href="/fantezi" class="n-link"> <i class="km km-live-games"></i> <span>FANTEZI FUTBOL</span> </a> </div>
 						</div>
 					</div>
