--- a/templates/signup.html
+++ b/templates/signup.html
@@ -86,7 +86,7 @@
                 <div class="ui calendar" id="example2">
 				<div class="ui input left icon">
 				  <i class="calendar icon"></i>
-				  <input type="text" placeholder="Date">
+				  <input type="text" placeholder="Doğum Tarihi">
 				</div>
 			  </div>
                 <label for="nickname" style="font-family: sans-serif; font-size: 12px">Kullanıcı Adı</label>
