--- a/templates/panel/user_details.html
+++ b/templates/panel/user_details.html
@@ -235,7 +235,7 @@
                                     <div style="float: left; width: 45%; margin-left: 5%">
                                       Durum: Aktif
                                       <br>
-                                      Kimlik Onayı: {{ user.id_verified }}
+                                      Kimlik Onayı: {{ user.user_information.id_verified }}
                                       <br>
                                       Telefon Numarası: {{ user.user_information.tel_no }}
                                       <br>
