--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -121,7 +121,12 @@
 					<div class="after">
 						<div class="col1">
 							{% for i in games_popular.0 %}
-								<a href="/casino/{{i.id}}"> <img style="max-height: 340px; border-radius: 10px" src="{{i.img}}"/> </a>
+								<a href="/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
+							{% endfor %}
+						</div>
+						<div class="col2">
+							{% for i in games_popular.1 %}
+								<a href="/casino/{{i.id}}"> <img style="max-height: 170px; border-radius: 10px" src="{{i.img}}"/> </a>
 							{% endfor %}
 						</div>
 					</div>
