--- a/templates/casino-game.html
+++ b/templates/casino-game.html
@@ -80,8 +80,8 @@
 	<app-content>
 		<div class="container">
           <br>
-			<div class="row">
-                <iframe src="{{ game_iframe }}" style="width: 100%; height: 80vh" frameborder="0"></iframe>
+			<div class="row" style="padding: 0;">
+                <iframe src="{{ game_iframe }}" style="width: 100vw; height: 90vh" frameborder="0"></iframe>
             </div>
 		</div>
 	</app-content>
