--- a/templates/casino-game.html
+++ b/templates/casino-game.html
@@ -80,7 +80,7 @@
 	<app-content>
 		<div class="container">
           <br>
-			<div class="row" style="padding: 0;">
+			<div class="row" style="padding: 0 !important;">
                 <iframe src="{{ game_iframe }}" style="width: 100vw; height: 90vh" frameborder="0"></iframe>
             </div>
 		</div>
