--- a/templates/casino-game.html
+++ b/templates/casino-game.html
@@ -10,6 +10,13 @@
 	<link rel="stylesheet" href="/css/fontawesome.min.css" />
 	<link rel="stylesheet" href="/plugins/owl/owl.carousel.min.css" />
 	<script src="//code.tidio.co/qeafxo2jnxjghzs7okkx7ahlzkdbd4fl.js" async></script>
+	<style>
+		@media screen and (max-width: 800px) {
+			iframe{
+				height: 90vh !important;
+			}
+		}
+	</style>
 </head>
 <body>
 	<app-header>
@@ -81,7 +88,7 @@
 		<div class="container">
           <br>
 			<div class="row" style="padding: 0 !important;">
-                <iframe src="{{ game_iframe }}" style="width: 100vw; height: 90vh" frameborder="0"></iframe>
+                <iframe src="{{ game_iframe }}" style="width: 100vw; height: 80vh" frameborder="0"></iframe>
             </div>
 		</div>
 	</app-content>
