--- a/templates/profile.html
+++ b/templates/profile.html
@@ -445,7 +445,7 @@
                     <input id="iban" name="iban" type="text" style="width: 300px; max-width: 90%; padding: 5px; font-family: sans-serif; outline: none; font-size: 1rem; background-color: transparent; color: white; border-radius: 5px; border: 1px solid rgb(80, 80, 80)">
                     <br>
                     <br>
-                    <button style="color: white; font-family: sans-serif; width: 300px; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none">Para Çek</button>
+                    <button style="color: white; font-family: sans-serif; width: 300px; max-width: 90%; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none">Para Çek</button>
                 </form>
                 {% endfor %}
                 {% for key, item in available_withdraw_methods.items() %}
@@ -486,7 +486,7 @@
                     <input id="iban" name="iban" type="text" style="width: 300px; max-width: 90%; padding: 5px; font-family: sans-serif; outline: none; font-size: 1rem; background-color: transparent; color: white; border-radius: 5px; border: 1px solid rgb(80, 80, 80)">
                     <br>
                     <br>
-                    <button style="color: white; font-family: sans-serif; width: 300px; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none">Para Çek</button>
+                    <button style="color: white; font-family: sans-serif; width: 300px; max-width: 90%; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none">Para Çek</button>
                 </form>
                 {% endfor %}
             </div>
@@ -636,7 +636,7 @@
                     <br>
                     <br>
 
-                    <button style="color: white; font-family: sans-serif; width: 300px; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none">Yatırım Yap</button>
+                    <button style="color: white; max-width: 90%; font-family: sans-serif; width: 300px; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none">Yatırım Yap</button>
                 </form>
             {% endfor %}
         </div>
