--- a/css/sportsbook.css
+++ b/css/sportsbook.css
@@ -306,8 +306,6 @@ app-home-header.other-pages.sticky-top {
 }
 .sportsbook .c4 .matchlist .matchshead .item {
     display: flex;
-    w,: ;
-    w,: 1;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-end;
@@ -923,8 +921,8 @@ match-details.match-details .odds-cont .odds-opts .odds-list .odd-detail .odds .
 		color: #fff;
 	}
 	.mobile-menu .owl-item.active.center .mm-item {
-		background: #8261a6;
-		box-shadow: 0px 0px 11px -4px rgba(130,97,166,1);
+		background: var(--baseColor);
+		box-shadow: 0px 0px 11px -4px var(--shadowColor);
 		transform: scale(0.9);
 	}
 	.mobile-menu .mm-item {
