--- a/templates/casino-game.html
+++ b/templates/casino-game.html
@@ -9,14 +9,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/css/fontawesome.min.css" />
 	<link rel="stylesheet" href="/plugins/owl/owl.carousel.min.css" />
-	<script src="//code.tidio.co/qeafxo2jnxjghzs7okkx7ahlzkdbd4fl.js" async></script>
-	<style>
-		@media screen and (max-width: 800px) {
-			iframe{
-				height: 90vh !important;
-			}
-		}
-	</style>
+	<script src="//code.tidio.co/6sibsyjb7qcqlirjvzar5yfkqjjk6ips.js" async></script>
 </head>
 <body>
 	<app-header>
@@ -75,7 +68,7 @@
 					<a href="/canli_bahis" class="n-link"> <i class="km km-live"></i> <span>CANLI BAHİS</span> </a>
 					<a href="/bahis" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a>
 					<a href="/casino" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a>
-					<a href="/casino?provider_id=122&provider_name=Evolution" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
+					<a href="/casino" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
 					<a href="/fantezi" class="n-link"> <i class="km km-games"></i> <span>OYUNLAR</span> </a>
 					<a href="/casino?search_query=bingo" class="n-link"> <i class="km km-tomb"></i> <span>TOMBALA</span> </a>
 					<a href="/casino/1022357" class="n-link"> <i class="km km-aviator"></i> <span>AVIATOR</span> </a>
@@ -87,8 +80,8 @@
 	<app-content>
 		<div class="container">
           <br>
-			<div class="row" style="padding: 0 !important;">
-                <iframe src="{{ game_iframe }}" style="width: 100vw; height: 80vh" frameborder="0"></iframe>
+			<div class="row">
+                <iframe src="{{ game_iframe }}" style="width: 100%; height: 80vh" frameborder="0"></iframe>
             </div>
 		</div>
 	</app-content>
@@ -144,7 +137,22 @@
 			</div>
 		</div>
 	</app-footer>
-
+	<app-mobilemenu>
+		<fast-menu>
+			<div class="area">
+				<div class="info"> <a href="/howtoplay"> <img src="/img/mobilemenu/i1.png" /> </a> </div>
+				<div class="line"></div>
+				<div class="livechat"> <a href="/contact"> <img src="/img/mobilemenu/i2.png" /> </a> </div>
+			</div>
+			<div class="mobile-menu">
+				<a href="/fantezi"> <img src="/img/mobilemenu/i7.png" /> <span>Fantezi Futbol</span> </a>
+				<a href="/bahis"> <img src="/img/mobilemenu/i4.png" /> <span>Spor</span> </a>
+				<a href='/'> <img src="/img/mobilemenu/i3.png" /> <span>Anasayfa</span> </a>
+				<a href="/canli_bahis"> <img src="/img/mobilemenu/i5.png" /> <span>Canlı Bahis</span> </a>
+				<a href="/casino"> <img src="/img/mobilemenu/i6.png" /> <span>Casino</span> </a>
+			</div>
+		</fast-menu>
+	</app-mobilemenu>C
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/plugins/owl/owl.carousel.min.js"></script>
