--- a/templates/casino.html
+++ b/templates/casino.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/css/fontawesome.min.css" />
 	<link rel="stylesheet" href="/plugins/owl/owl.carousel.min.css" />
-	<script src="//code.tidio.co/qeafxo2jnxjghzs7okkx7ahlzkdbd4fl.js" async></script>
+	<script src="//code.tidio.co/6sibsyjb7qcqlirjvzar5yfkqjjk6ips.js" async></script>
 	<style>
         table {
             border-collapse: collapse;
@@ -39,7 +39,7 @@
 
         @media screen and (max-width: 800px) {
           .game-img{
-            width: 37.5vw;
+            width: 25vw;
           }
           #search-box{
             width: 95%;
@@ -116,7 +116,7 @@
 					<a href="/canli_bahis" class="n-link"> <i class="km km-live"></i> <span>CANLI BAHİS</span> </a>
 					<a href="/bahis" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a>
 					<a href="/casino" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a>
-					<a href="/casino?provider_id=122&provider_name=Evolution" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
+					<a href="/casino" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
 					<a href="/fantezi" class="n-link"> <i class="km km-games"></i> <span>OYUNLAR</span> </a>
 					<a href="/casino?search_query=bingo" class="n-link"> <i class="km km-tomb"></i> <span>TOMBALA</span> </a>
 					<a href="/casino/1022357" class="n-link"> <i class="km km-aviator"></i> <span>AVIATOR</span> </a>
