--- a/templates/panel/bonus.html
+++ b/templates/panel/bonus.html
@@ -102,11 +102,11 @@
                         <!-- Actions -->
                         <div class="col-sm-6 col-12 text-sm-end">
                             <div class="mx-n1">
-                                <a href="#" class="btn d-inline-flex btn-sm btn-neutral border-base mx-1">
+                                <a href="/admin/promo_codes" class="btn d-inline-flex btn-sm btn-neutral border-base mx-1">
                                     <span class=" pe-2">
                                         <i class="bi bi-pencil"></i>
                                     </span>
-                                    <span>Ara</span>
+                                    <span>Promosyon Kodları</span>
                                 </a>
                                 <a href="/admin/bonus_requests" class="btn d-inline-flex btn-sm btn-primary mx-1">
                                     <span class=" pe-2">
@@ -486,7 +486,7 @@
                                     </td>
                                     <td class="text-end">
                                         <a href="#" class="btn btn-sm btn-neutral">Detaylar</a>
-                                        <button type="button" class="btn btn-sm btn-square btn-neutral text-danger-hover">
+                                        <button onclick="document.location = '/admin/bonuses/remove?bonus_id={{ i.id }}'" type="button" class="btn btn-sm btn-square btn-neutral text-danger-hover">
                                             <i class="bi bi-trash"></i>
                                         </button>
                                     </td>
