--- a/templates/signup.html
+++ b/templates/signup.html
@@ -84,15 +84,15 @@
                 <label for="nickname" style="font-family: sans-serif; font-size: 12px">Kullanıcı Adı</label>
                 <br>
                 <input id="nickname" name="nickname" type="text" style="padding: 5px; font-family: sans-serif; outline: none; font-size: 1.2rem; border-radius: 5px; border: none;">
+				<label for="promo_code" style="font-family: sans-serif; font-size: 12px">Promosyon Kodu</label>
+                <br>
+                <input id="promo_code" name="promo_code" type="text" style="padding: 5px; font-family: sans-serif; outline: none; font-size: 1.2rem; border-radius: 5px; border: none;">
                 <br>
                 <br>
             </div>
         </div>
           <br>
           <script>
-			  $('#example2').calendar({
-				  type: 'date'
-				});
               let step = 1
               function proceedForm(){
                   if(step === 2){
@@ -160,7 +160,7 @@
 					<a href="/canli_bahis" class="n-link"> <i class="km km-live"></i> <span>CANLI BAHİS</span> </a>
 					<a href="/bahis" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a>
 					<a href="/casino" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a>
-					<a href="/casino?provider_id=122&provider_name=Evolution" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
+					<a href="/casino" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a>
 					<a href="/fantezi" class="n-link"> <i class="km km-games"></i> <span>OYUNLAR</span> </a>
 					<a href="/casino?search_query=bingo" class="n-link"> <i class="km km-tomb"></i> <span>TOMBALA</span> </a>
 					<a href="/casino/1022357" class="n-link"> <i class="km km-aviator"></i> <span>AVIATOR</span> </a>
@@ -195,7 +195,7 @@
 						<div class="sLymx3 owl-carousel">
 							<div class="slide"> <a href="/bahis" class="n-link"> <i class="km km-sports"></i> <span>SPOR</span> </a> </div>
 							<div class="slide"> <a href="/casino" class="n-link"> <i class="km km-slot"></i> <span>SLOT</span> </a> </div>
-							<div class="slide"> <a href="/casino?provider_id=122&provider_name=Evolution" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a> </div>
+							<div class="slide"> <a href="/casino" class="n-link"> <i class="km km-live-casino"></i> <span>CANLI CASINO</span> </a> </div>
 							<div class="slide"> <a href="/fantezi" class="n-link"> <i class="km km-live-games"></i> <span>FANTEZI FUTBOL</span> </a> </div>
 						</div>
 					</div>
