--- a/templates/signup.html
+++ b/templates/signup.html
@@ -257,15 +257,15 @@
 					<div class="col-2">
 						<h3> Hakkımızda </h3>
 						<ul>
-							<li> <a href="/howtoplay"> Firma Bilgileri </a> </li>
-							<li> <a href="#."> İletişim </a> </li>
-							<li> <a href="#."> Yardım - SSS </a> </li>
+							<li> <a href="/howtoplay?data=contact"> Firma Bilgileri </a> </li>
+							<li> <a href="/howtoplay?data=contact"> İletişim </a> </li>
+							<li> <a href="/howtoplay"> Yardım - SSS </a> </li>
 						</ul>
 					</div>
 					<div class="col-2">
 						<h3> ŞARTLAR VE KURALLAR </h3>
 						<ul>
-							<li> <a href="#."> Genel Kural ve Şartlar </a> </li>
+							<li> <a href="/howtoplay"> Genel Kural ve Şartlar </a> </li>
 							<li> <a href="#."> Gizlilik Politikası </a> </li>
 							<li> <a href="#."> Sorumlu Oyun </a> </li>
 						</ul>
