--- a/templates/panel/cms.html
+++ b/templates/panel/cms.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>M2 Entertainment</title>
   <style>
 
   @import url(https://unpkg.com/@webpixels/css@1.1.5/dist/index.css);
@@ -140,6 +140,22 @@
                                             <option value="update-images">Mevcut Görseli Güncelle</option>
                                             <option value="update-theme">Temayı Güncelle</option>
                                         </select>
+                                    {% if option == "update-text" %}
+                                    <form method="post" enctype="multipart/form-data">
+                                        <input type="text" name="form-type" value="image-update" style="display: none">
+                                        <br>
+                                        <select id="file-select" name="file-select" style="-webkit-appearance: none; border: 1px solid gray; padding: 5px; border-radius: 5px; outline: none">
+                                            <option value="">Güncellemek için içerik seçin</option>
+                                            {% for i in images %}
+                                                {% if "text" in i %}
+                                                    <option value="{{ i }}">{{ i }}</option>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </select>
+                                        <input type="file" style="margin-left: 25px" name="image-to-update">
+                                        <button style="background-color: #5c60f5; color: white; border-radius: 5px; margin-top: 15px">Kaydet</button>
+                                    </form>
+                                    {% elif option == "remove-slider" %}
                                     {% if option == "update-images" %}
                                     <form method="post" enctype="multipart/form-data">
                                         <input type="text" name="form-type" value="image-update" style="display: none">
