--- a/templates/panel/cms.html
+++ b/templates/panel/cms.html
@@ -155,8 +155,7 @@
                                         <input type="file" style="margin-left: 25px" name="image-to-update">
                                         <button style="background-color: #5c60f5; color: white; border-radius: 5px; margin-top: 15px">Kaydet</button>
                                     </form>
-                                    {% elif option == "remove-slider" %}
-                                    {% if option == "update-images" %}
+                                    {% elif option == "update-images" %}
                                     <form method="post" enctype="multipart/form-data">
                                         <input type="text" name="form-type" value="image-update" style="display: none">
                                         <br>
