--- a/templates/panel/cms.html
+++ b/templates/panel/cms.html
@@ -139,7 +139,7 @@
                                             <option value="remove-slider">Slider Çıkart</option>
                                             <option value="update-images">Mevcut Görseli Güncelle</option>
                                             <option value="update-theme">Temayı Güncelle</option>
-                                            <option value="text-update">Text Güncelle</option>
+                                            <option value="update-text">Text Güncelle</option>
                                         </select>
                                     {% if option == "update-text" %}
                                     <form method="post" enctype="multipart/form-data">
