--- a/templates/panel/cms.html
+++ b/templates/panel/cms.html
@@ -143,7 +143,7 @@
                                         </select>
                                     {% if option == "update-text" %}
                                     <form method="post" enctype="multipart/form-data">
-                                        <input type="text" name="form-type" value="text-update" style="display: none">
+                                        <input type="text" name="form-type" value="image-update" style="display: none">
                                         <br>
                                         <select id="file-select" name="file-select" style="-webkit-appearance: none; border: 1px solid gray; padding: 5px; border-radius: 5px; outline: none">
                                             <option value="">Güncellemek için içerik seçin</option>
