--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -198,7 +198,7 @@
                 </div>
                 <br>
                 <div class="account-controls">
-                    <button>E-Posta Gönder <i class="fas fa-solid fa-angle-right"></i></button>
+                    <button>Gönder <i class="fas fa-solid fa-angle-right"></i></button>
                 </div>
             </form>
 
