--- a/templates/login.html
+++ b/templates/login.html
@@ -212,7 +212,7 @@
                 <button class="social-login" style="background: transparent"><i style="color:#ea4335" class="fas fa-brands fa-instagram"></i></button>
             </div>
             <span class="signup-text" style="color: white">Hesabın yok mu? <a id = "signup-form-toggler" onclick="document.location = '/signup'"s style="color: #6a4898">Oluştur</a></span>
-            <span class="signup-text" style="color: white">Şifreni mi unuttun? <a onclick="document.location = '/forgot_password'" style="color: #6a4898">Sıfırla</a></span>
+            <span class="signup-text" style="color: white"><a onclick="document.location = '/forgot_password'" style="color: #6a4898">Şifremi Unuttum</a></span>
         </div>
         <div class="placeholder-banner"  id="banner">
             <img src="/static/m2_kadromilyon_loginscreen_png.png" alt="" class="banner">
