--- a/templates/papara_deposit.html
+++ b/templates/papara_deposit.html
@@ -20,7 +20,7 @@
     <center>
         <p style="color: white; font-size: 2rem; margin-top: 5%">Bilgiler</p>
         <p style="width: 50%; color: white">Hesap No: {{ papara_no }}</p>
-      <p style="width: 50%; color: white">Açıklama: {{ transaction.payment_unique_number }}</p>
+      <p style="width: 50%; color: white">Adı Soyadı: {{ papara_name }}</p>
     </center>
     <div style="color: black; width: 100%; position: absolute; text-align: center; bottom: 50px;">
         <p style="color: white">M2 Betting, LLC.</p>
