--- a/templates/signup.html
+++ b/templates/signup.html
@@ -89,6 +89,7 @@
                 <input id="promo_code" name="promo_code" type="text" style="padding: 5px; font-family: sans-serif; outline: none; font-size: 1.2rem; border-radius: 5px; border: none;">
                 <br>
                 <br>
+				<button style="color: white; font-family: sans-serif; width: 90%; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none" type="submit">Kayıt Ol</button>
             </div>
         </div>
           <br>
@@ -111,9 +112,6 @@
 				koşullar, politikalar ve ilgili diğer site kurallarını
 				okuduğumu ve kabul ettiğimi onaylıyorum.
 			</span>
-			  <br>
-			  <br>
-			<center><button style="color: white; font-family: sans-serif; width: 90%; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none" type="submit">Kayıt Ol</button></center>
 			  <br>
 			  <br>
 			  <center>All right reserved. © Grand Casino<p>2024</p></center>
