--- a/templates/signup.html
+++ b/templates/signup.html
@@ -104,6 +104,13 @@
               }
           </script>
 		  <div style="position: fixed; max-width: 750px; background: #1d1d1f; padding: 20px; box-sizing: border-box; border-radius: 15px">
+			  <input type="checkbox" style="width: fit-content">
+			<span style="font-size: 12px;">
+				Yukarıda verdiğim bilgilerin doğru olduğunu
+				teyit ederim. Ayrıca tüm kurallar, şartlar,
+				koşullar, politikalar ve ilgili diğer site kurallarını
+				okuduğumu ve kabul ettiğimi onaylıyorum.
+			</span>
 			  <br>
 			  <br>
 			<center><button style="color: white; font-family: sans-serif; width: 90%; padding: 10px; box-sizing: border-box; background-color: var(--baseColor); outline: none; border: none" type="submit">Kayıt Ol</button></center>
