--- a/templates/panel/users.html
+++ b/templates/panel/users.html
@@ -108,11 +108,11 @@
                                     </span>
                                     <span>Ara</span>
                                 </a>
-                                <a href="/admin/users" class="btn d-inline-flex btn-sm btn-primary mx-1">
+                                <a href="/admin/affiliate" class="btn d-inline-flex btn-sm btn-primary mx-1">
                                     <span class=" pe-2">
-                                        <i class="bi bi-plus"></i>
+                                        <i class="bi bg-info-subtle"></i>
                                     </span>
-                                    <span>Panel Kullanıcısı Ekle</span>
+                                    <span>Affiliate Paneli</span>
                                 </a>
                             </div>
                         </div>
@@ -133,13 +133,20 @@
                                         <form class="col" method="post" enctype="multipart/form-data">
                                             <h1 class="h3 font-bold mb-0">Kullanıcı Ekle</h1>
                                           <br>
-                                          <select name="user_permission" onchange="document.getElementById(this.value).style.display = 'block'" style="-webkit-appearance: none; border: 1px solid gray; padding: 5px; border-radius: 5px; outline: none">
+                                          <select name="user_permission" onchange="document.getElementById(this.value).style.display = 'block';" style="-webkit-appearance: none; border: 1px solid gray; padding: 5px; border-radius: 5px; outline: none">
                                             <option value="select-type">Kullanıcı Sınıfı</option>
                                             {% for i in permissions %}
                                                 <option value="{{ i.id }}">{{ i.permission_name }}</option>
                                               {% endfor %}
+                                              <option value="affiliate">Affiliate</option>
                                             <option value="new-class">Yeni Sınıf</option>
                                           </select>
+                                            <br>
+                                              <br>
+                                            <div id="affiliate" style="display: none">
+                                                <input type="text" style="-webkit-appearance: none; border: 1px solid gray; padding: 5px; border-radius: 5px; outline: none" name="affiliate_commission_percentage" placeholder="Komisyon Oranı %">
+                                                <input type="text" style="-webkit-appearance: none; border: 1px solid gray; padding: 5px; border-radius: 5px; outline: none" name="affiliate_cpa" placeholder="CPA ₺">
+                                            </div>
 
                                             <br>
                                             <br>
