--- a/templates/profile.html
+++ b/templates/profile.html
@@ -260,72 +260,35 @@
 				    <th scope="col">İşlem Türü</th>
 				    <th scope="col">Kullanıcı Adı</th>
 				    <th scope="col">Tutar</th>
-				    <th scope="col">Başlangıç Zamanı</th>
-				    <th scope="col">Bitiş Zamanı</th>
-				    <th scope="col">Müşteri ID</th>
+				    <th scope="col">İşlem Tarihi</th>
 				    <th scope="col">Kanal</th>
-				    <th scope="col">IP Adresi</th>
-				    <th scope="col">Affiliate ID</th>
 				    <th scope="col">Ek Bilgiler</th>
 				    <th scope="col">Statü</th>
-				    <th></th>
 				</tr>
 			    </thead>
 			    <tbody>
 				{% for i in transactions %}
 				    <tr class="searchable-div">
 				    <td>
-					<a class="text-heading font-semibold" href="#">
 					    {{ i.transaction_type }}
-					</a>
 				    </td>
 				    <td>
-					<a class="text-heading font-semibold" href="#">
 					    {{ i.user.user_uuid }}
-					</a>
 				    </td>
 				    <td>
-					<a class="text-heading font-semibold" href="#">
 					    {{ i.transaction_amount }}₺
-					</a>
 				    </td>
 				    <td>
-					<a class="text-heading font-semibold" href="#">
 					    {{ i.transaction_date }}
-					</a>
 				    </td>
 				    <td>
-					<a class="text-heading font-semibold" href="#">
-					    {{ i.transaction_date }}
-					</a>
-				    </td>
-				    <td>
-					<a class="text-heading font-semibold" href="#">
-					    {{ i.user.id }}
-					</a>
-				    </td>
-				    <td>
-	
-					<a class="text-heading font-semibold" href="#">
 					    {{ i.transaction_type }}
-					</a>
-				    </td>
-				    <td>
-					{{ i.user.ip_address }}
-				    </td>
-				    <td>
-					<a class="text-heading font-semibold" href="#">
-					    {{ i.user.referred_by }}
-					</a>
 				    </td>
 				    <td>
 					{{ i.payment_unique_number }}
 				    </td>
 				    <td>
 					{{ i.transaction_status }}
-				    </td>
-				    <td class="text-end">
-					<a href="#" class="btn btn-sm btn-neutral">Detaylar</a>
 				    </td>
 				</tr>
 				{% endfor %}
