--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -317,5 +317,6 @@
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/plugins/owl/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="/js/script.js"></script>
+	<script type="text/javascript" src="/js/script1.js"></script>
 </body>
 </html>
