--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -78,7 +78,7 @@
 			</div>
 		</app-home-header>
 	</app-header>
-	<div class="modal fade" id="logRegModal" tabindex="-1" aria-labelledby="logRegModal" aria-hidden="true">
+	<div class="modal fade" style="padding: 15px; box-sizing: border-box" id="logRegModal" tabindex="-1" aria-labelledby="logRegModal" aria-hidden="true">
 	  <div class="modal-dialog fast-logreg">
 		<div class="modal-content">
 		  <div class="modal-body">
