--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -96,7 +96,7 @@
 					</div>
 				</div>
 				<form class="form-content login" method="POST" enctype="multipart/form-data" action="/signup">
-					<div class="form-elements" id="login-elems">
+					<div class="form-elements">
 						<a href="#." class="dyn-text register">Hesabınız yok mu? Tıklayarak, kayıt olun.</a>
 						<h3>HEMEN GİRİŞ YAPIN!</h3>
 						<div class="inputs was-validated">
