--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -122,7 +122,7 @@
 							<a href="#."> <i class="fa-solid fa-phone-volume"></i> DESTEK İLE İLETİŞİME GEÇİN </a>
 						</div>
 					</div>
-				</div>
+				</form>
 				<form class="form-content register" method="POST" enctype="multipart/form-data" action="/signup">
 					<div class="form-elements">
 						<div class="inputs was-validated">
