--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -95,9 +95,8 @@
 						</div>
 					</div>
 				</div>
-				<form class="form-content login" method="POST" enctype="multipart/form-data" action="/signup">
+				<form class="form-content login" method="POST" enctype="multipart/form-data" action="/login">
 					<div class="form-elements">
-						<a href="#." class="dyn-text register">Hesabınız yok mu? Tıklayarak, kayıt olun.</a>
 						<h3>HEMEN GİRİŞ YAPIN!</h3>
 						<div class="inputs was-validated">
 							<div class="form-floating mb-3">
@@ -151,7 +150,7 @@
 							  <label>Doğum Tarihi</label>
 							</div>
 							<div class="form-check">
-							<button class="btn btn-default"> KAYIT OL </button>
+							<button class="btn btn-default" style="backgroundColor: var(--baseColor); color: var(--generalTextColor);"> KAYIT OL </button>
 						</div>
 						<div class="form-footer">
 							<a href="#."> <i class="fa-solid fa-phone-volume"></i> DESTEK İLE İLETİŞİME GEÇİN </a>
