--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -123,6 +123,7 @@
 					</div>
 				</form>
 				<form class="form-content register" method="POST" enctype="multipart/form-data" action="/signup">
+					<br>
 					<div class="form-elements">
 						<div class="inputs was-validated">
 							<div class="form-floating mb-3">
@@ -150,7 +151,7 @@
 							  <label>Doğum Tarihi</label>
 							</div>
 							<div class="form-check">
-							<button class="btn btn-default" style="backgroundColor: var(--baseColor); color: var(--generalTextColor);"> KAYIT OL </button>
+							<button class="btn btn-default" style="backgroundColor: var(--baseColor); color: var(--generalTextColor); width: fit-content;"> KAYIT OL </button>
 						</div>
 						<div class="form-footer">
 							<a href="#."> <i class="fa-solid fa-phone-volume"></i> DESTEK İLE İLETİŞİME GEÇİN </a>
