--- a/templates/casino.html
+++ b/templates/casino.html
@@ -148,8 +148,8 @@
 		<div class="footer">
 			<div class="inner">
 				<div class="fast-links">
-					<a href="#." class="btn"> <i class="km km-affiliate"></i> Affiliate </a>
-					<a href="#." class="btn"> <i class="km km-call"></i> Sizi Arayalım </a>
+					<a href="mailto:sales@m2betting.com" class="btn"> <i class="km km-affiliate"></i> Affiliate </a>
+					<a href="/signup" class="btn"> <i class="km km-call"></i> Sizi Arayalım </a>
 					<a href="#." class="btn"> <i class="km km-whatsapp"></i> Whatsapp </a>
 					<a href="#." class="btn"> <i class="km km-telegram"></i> Telegram </a>
 					<a href="#." class="btn"> <i class="km km-twitter"></i> Twitter </a>
@@ -158,15 +158,15 @@
 					<div class="col-2">
 						<h3> Hakkımızda </h3>
 						<ul>
-							<li> <a href="#."> Firma Bilgileri </a> </li>
-							<li> <a href="#."> İletişim </a> </li>
-							<li> <a href="#."> Yardım - SSS </a> </li>
+							<li> <a href="/howtoplay?data=contact"> Firma Bilgileri </a> </li>
+							<li> <a href="/howtoplay?data=contact"> İletişim </a> </li>
+							<li> <a href="/howtoplay"> Yardım - SSS </a> </li>
 						</ul>
 					</div>
 					<div class="col-2">
 						<h3> ŞARTLAR VE KURALLAR </h3>
 						<ul>
-							<li> <a href="#."> Genel Kural ve Şartlar </a> </li>
+							<li> <a href="/howtoplay"> Genel Kural ve Şartlar </a> </li>
 							<li> <a href="#."> Gizlilik Politikası </a> </li>
 							<li> <a href="#."> Sorumlu Oyun </a> </li>
 						</ul>
@@ -175,9 +175,8 @@
 						<h3> GÖSTERİMLER </h3>
 						<ul>
 							<li> <a href="#."> Affiliate </a> </li>
-							<li> <a href="#."> Turnuvalar </a> </li>
-							<li> <a href="#."> Maç Programı </a> </li>
-							<li> <a href="#."> Canlı Sonuçlar </a> </li>
+							<li> <a href="/casino"> Turnuvalar </a> </li>
+							<li> <a href="/bahis"> Maç Programı </a> </li>
 						</ul>
 					</div>
 				</div>
@@ -186,13 +185,13 @@
 				</div>
 				<div class="copy">
 					<a href="#." class="licence-url"> <img src="/img/licence.png" /> </a>
-					<p> M2 is operated by Data Link Digital B.V. registered under No. 164124 at, Chuchubiweg 17, Curaçao. This website is licensed and regulated by Curaçao eGaming, license No. 1668/JAZ.  In
+					<p> Şahbet.com is operated by M2 Betting registered under No. 164124 at, Chuchubiweg 17, Curaçao. This website is licensed and regulated by Curaçao eGaming, license No. 1668/JAZ.  In
 	order to register for this website, the user is required to accept the “<a href="#.">General Terms and Conditions.</a>" In the event the ”<a href="#.">General Terms and Conditions</a>" are updated, existing users may choose to
 	discontinue using the products and services before the said update shall become effective, which is a minimum of two weeks after it has been announced.  </p>
 				</div>
 				<div class="finish">
 					<a href="/"> <img src="/img/logo.png" /> </a>
-					<p> 2024 © Şahbey </p>
+					<p> 2024 © Şahbet </p>
 				</div>
 			</div>
 		</div>
@@ -200,16 +199,16 @@
 	<app-mobilemenu>
 		<fast-menu>
 			<div class="area">
-				<div class="info"> <a href="#."> <img src="/img/mobilemenu/i1.png" /> </a> </div>
+				<div class="info"> <a href="/howtoplay"> <img src="/img/mobilemenu/i1.png" /> </a> </div>
 				<div class="line"></div>
-				<div class="livechat"> <a href="#."> <img src="/img/mobilemenu/i2.png" /> </a> </div>
+				<div class="livechat"> <a href="/contact"> <img src="/img/mobilemenu/i2.png" /> </a> </div>
 			</div>
 			<div class="mobile-menu">
-				<a href="#."> <img src="/img/mobilemenu/i7.png" /> <span>Yüksek Limit</span> </a>
-				<a href="#."> <img src="/img/mobilemenu/i4.png" /> <span>Günlük Yarışmacılar</span> </a>
-				<a href="#."> <img src="/img/mobilemenu/i3.png" /> <span>Anasayfa</span> </a>
-				<a href="#."> <img src="/img/mobilemenu/i5.png" /> <span>Haftalık Yarışmalar</span> </a>
-				<a href="#."> <img src="/img/mobilemenu/i6.png" /> <span>Kampanyalar</span> </a>
+				<a href="/casino?provider_id=122&provider_name=Evolution"> <img src="/img/mobilemenu/i7.png" /> <span>Canlı Casino</span> </a>
+				<a href="/bahis"> <img src="/img/mobilemenu/i4.png" /> <span>Spor</span> </a>
+				<a href='/'> <img src="/img/mobilemenu/i3.png" /> <span>Anasayfa</span> </a>
+				<a href="/canli_bahis"> <img src="/img/mobilemenu/i5.png" /> <span>Canlı Bahis</span> </a>
+				<a href="/casino"> <img src="/img/mobilemenu/i6.png" /> <span>Casino</span> </a>
 			</div>
 		</fast-menu>
 	</app-mobilemenu>
