--- a/templates/casino.html
+++ b/templates/casino.html
@@ -95,8 +95,7 @@
 							</div>
 						</div>
 						<div class="part only-desk">
-							<br>
-							<div class="gameproviders">
+							<div class="gameproviders" style="max-width: 60vw;">
 								{% for i in providers %}
 						                          <a href="/casino?provider_id={{ i.id }}&provider_name={{ i.name }}"> {{ i.name }} </a>
 						                {% endfor %}
